syntax = "proto3";

package messenger;

option go_package = "./moon_grpc";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}



